# expression

./: README.md  setup.cfg
src/expression/: evaluate.py
src/expression/expr/: arithmetic.py  parse.py
tests/: test_evaluate.py  test_expression.py  test_parse.py
