[metadata]
name = expression
author = Marius Smytzek
author_email = marius.smytzek@cispa.de
description = The arithmetic expression project for Tests4Py
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smythi93/expression
license = MIT License
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    evaluate = expression.evaluate:main